argocd-apps/infra/ingress/ingress-config/boutique-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutiqe-ingress
  namespace: boutiqe
spec:
  rules:
  - host: boutique.zarenoff.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boutiqe-internal
            port:
              number: 80
